# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.618 2006/03/10 23:37:45 agaffney Exp $

  10 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  raise an exception if the existing partitions are out of disk order

  8 Mar 2006; Preston Cody <codeman@gentoo.org>
  src/fe/dialog/gli-dialog and src/GLIGenDialog:
  added networkless mode to gli-dialog.
  
  6 Mar 2006; Preston Cody <codeman@gentoo.org>
  src/templates/x86AT:
  add windows detection code for grub.  untested.
  
  6 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  bootloader and partitioning external commands log to compile_output.log
  wait for device node to exist before resizing
  add -v to ntfsresize command
  src/GLIStorageDevice.py:
  return start/end with ip structure
  pad min ntfs size by 50 MB just to be safe
  src/GLIArchitectureTemplate.py:
  only install filesystem tools for partitions with a mountpoint

  5 Mar 2006; Preston Cody <codeman@gentoo.org>
  add error catching and text to saving profile dialogs

  4 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  create /tmp, /var/tmp, and /var/lib/portage with proper permissions
  src/templates/x86ArchitectureTemplate.py:
  fix checks for changed partitions so they will actually get deleted

  3 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIClientController.py:
  slightly better error handling for pre-install failures

  2 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  proper return code checking for ext2/3 resizing

  28 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIClientController.py:
  accept 'none' as well as 'null' for network type
  src/GLIArchitectureTemplate.py:
  ignore extended partitions in mount_local_partitions()
  src/templates/x86ArchitectureTemplate.py: