@@ -91,15 +91,19 @@ class Device:
 				if parted_part.fs_type != None: fs_type = parted_part.fs_type.name
 				if parted_part.type == 2: fs_type = "extended"
 				if archinfo[self._arch]['extended'] and parted_part.num > 4:
-					if parted_part.geom.start < last_log_end:
+#					print str(parted_part.num) + ": last_log_end=" + str(last_log_end) + ", start=" + str(parted_part.geom.start)
+					if parted_part.geom.start < last_log_end or parted_part.num < last_log_part:
 						raise GLIException("PartitionsOutOfOrderError", "fatal", "set_partitions_from_disk", "Your partitions are not in physical disk order.")
 					last_log_end = parted_part.geom.end
 					last_log_part = parted_part.num
+#					print "new last_log_end=" + str(last_log_end)
 				else:
-					if parted_part.geom.start < last_end:
+#					print str(parted_part.num) + ": last_end=" + str(last_end) + ", start=" + str(parted_part.geom.start)
+					if parted_part.geom.start < last_end or parted_part.num < last_part:
 						raise GLIException("PartitionsOutOfOrderError", "fatal", "set_partitions_from_disk", "Your partitions are not in physical disk order.")
 					last_end = parted_part.geom.end
 					last_part = parted_part.num
+#					print "new last_end=" + str(last_end)
 				self._partitions[int(parted_part.num)] = Partition(self, parted_part.num, part_mb, parted_part.geom.start, parted_part.geom.end, fs_type, format=False, existing=True)
 			elif parted_part.type_name == "free":
 				if self.get_extended_partition() and parted_part.geom.start >= self._partitions[self.get_extended_partition()].get_start() and parted_part.geom.end <= self._partitions[self.get_extended_partition()].get_end():
