@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.618 2006/03/10 23:37:45 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.619 2006/03/10 23:50:58 agaffney Exp $
 
   10 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
   raise an exception if the existing partitions are out of disk order
+  look for minors out of order instead of disk position
 
   8 Mar 2006; Preston Cody <codeman@gentoo.org>
   src/fe/dialog/gli-dialog and src/GLIGenDialog:
